# docker

./: Dockerfile  README.md  app.py  pyproject.toml
